--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -12,6 +12,12 @@
 	<packaging>jar</packaging>	
 	<name>kernel</name>
 	<url>http://maven.apache.org</url>
+	<repositories>
+		<repository>
+			<id>codelds</id>
+			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
+		</repository>
+	</repositories>	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -29,5 +35,11 @@
 			<version>3.1.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3</version>
+			<scope>compile</scope>
+		</dependency>		
 	</dependencies>
 </project>
