--- a/example/pom.xml
+++ b/example/pom.xml
@@ -47,4 +47,22 @@
 	<build>
 		<finalName>example</finalName>
 	</build>
+	<profiles>
+		<profile>
+			<id>openshift</id>
+			<build>
+				<finalName>travel</finalName>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.1.1</version>
+						<configuration>
+							<outputDirectory>webapps</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
