set default welcome page

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -51,7 +51,7 @@
 		<profile>
 			<id>openshift</id>
 			<build>
-				<finalName>travel</finalName>
+				<finalName>example</finalName>
 				<plugins>
 					<plugin>
 						<artifactId>maven-war-plugin</artifactId>
