--- a/js/pom.xml
+++ b/js/pom.xml
@@ -25,7 +25,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>src/main/javascript</directory>
+				<directory>${project.basedir}/src/main/javascript</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
@@ -47,8 +47,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<jsSrcDir>src/main/javascript</jsSrcDir>
-					<jsTestSrcDir>src/test/javascript</jsTestSrcDir>
+					<jsSrcDir>${project.basedir}/src/main/javascript</jsSrcDir>
+					<jsTestSrcDir>${project.basedir}/src/test/javascript</jsTestSrcDir>
 				</configuration>
 			</plugin>
 
@@ -91,7 +91,7 @@
 				<artifactId>maven-jstools-plugin</artifactId>
 				<version>0.7</version>
 				<configuration>
-					<jsDir>src/main/javascript</jsDir>
+					<jsDir>${project.basedir}/src/main/javascript</jsDir>
 					<includePrivate>true</includePrivate>
 					<includeUndocumented>true</includeUndocumented>
 				</configuration>
