--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -42,4 +42,17 @@
 			<scope>compile</scope>
 		</dependency>		
 	</dependencies>
+  <reporting>
+	<plugins>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>2.10.4</version>
+		<configuration>
+			<failOnError>false</failOnError>
+			 <reportOutputDirectory>${project.parent.basedir}/myoutput</reportOutputDirectory>
+		</configuration>
+	  </plugin>
+	</plugins>
+  </reporting>	
 </project>
