--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -9,15 +9,16 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>kernel</artifactId>
-	<packaging>jar</packaging>	
+	<packaging>jar</packaging>
 	<name>kernel</name>
 	<url>http://maven.apache.org</url>
+
 	<repositories>
 		<repository>
 			<id>codelds</id>
 			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
 		</repository>
-	</repositories>	
+	</repositories>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -40,19 +41,40 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.3</version>
 			<scope>compile</scope>
-		</dependency>		
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.9.5</version>
+		</dependency>
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.5</version>
+	</dependency>
+		
+
 	</dependencies>
-  <reporting>
-	<plugins>
-	  <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-javadoc-plugin</artifactId>
-		<version>2.10.4</version>
-		<configuration>
-			<failOnError>false</failOnError>
-			 <reportOutputDirectory>${project.parent.basedir}/myoutput</reportOutputDirectory>
-		</configuration>
-	  </plugin>
-	</plugins>
-  </reporting>	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.4</version>
+				<configuration>
+					<failOnError>false</failOnError>
+					<reportOutputDirectory>${project.parent.basedir}/myoutput</reportOutputDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
