--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
 install: 
-- chmod +x shpagesetup.sh
-- ./shpagesetup.sh
+- chmod +x pagesetup.sh
+- ./pagesetup.sh
 script: mvn test
