--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ install:
 - chmod +x pagesetup.sh
 - ./pagesetup.sh
 script: mvn test
+env:
+  global:
+  - ENCRYPTION_LABEL: "2bb2144f4e4f"
+  - COMMIT_AUTHOR_EMAIL: "archetana@gmail.com"
