db for openshift

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ deploy:
   domain: simplity
   on:
     repo: simplity/simplity
-after_success:
+after_deploy:
 - bash ./openshift.sh
 env:
   global:
