--- a/example/src/main/webapp/WEB-INF/web.xml
+++ b/example/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
 		<servlet-name>o</servlet-name>
 		<servlet-class>org.simplity.http.DefaultLogout</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>f</servlet-name>
+		<servlet-class>org.simplity.http.Stream</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>s</servlet-name>
 		<url-pattern>*._s</url-pattern>
@@ -27,6 +31,10 @@
 	<servlet-mapping>
 		<servlet-name>o</servlet-name>
 		<url-pattern>*._o</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>f</servlet-name>
+		<url-pattern>*._f</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>home.html</welcome-file>
