--- a/example/src/main/webapp/WEB-INF/web.xml
+++ b/example/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,6 @@
 		<url-pattern>*._f</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>home.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 </web-app>
