--- a/example/pom.xml
+++ b/example/pom.xml
@@ -16,6 +16,7 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<resourcespath> ${project.build.directory}/classes</resourcespath>
+		<storage.dir>${user.home}/simplity/files</storage.dir>
 	</properties>
 	<repositories>
 		<repository>
@@ -71,7 +72,7 @@
 					</dependencies>
 					<configuration>
 						<driver>org.h2.Driver</driver>
-						<url>jdbc:h2:file:target/db/classicmodels</url>
+						<url>jdbc:h2:file:${user.home}/db/classicmodels</url>
 						<username>sa</username>
 						<password></password>
 						<autocommit>true</autocommit>
@@ -80,7 +81,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -98,6 +98,46 @@
 							</srcFiles>
 						</configuration>
 					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>copy-resources1</id>
+						<!-- here the phase you need -->
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/src/main/webapp/WEB-INF/comp</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/src/main/resources/config</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-resources2</id>
+						<!-- here the phase you need -->
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${storage.dir}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/src/main/resources/downloads</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>					
 				</executions>
 			</plugin>
 		</plugins>
@@ -121,6 +161,53 @@
 							<outputDirectory>deployments</outputDirectory>
 							<warName>ROOT</warName>
 						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>install</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete
+											file="${project.build.outputDirectory}/environment.properties" />
+										<copy
+											file="src/main/resources/environment.test.properties"
+											tofile="${project.build.outputDirectory}/environment.properties" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-jar-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<configuration>
+									<classifier>test</classifier>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
