--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.simplity</groupId>
 		<artifactId>simplity</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<artifactId>kernel</artifactId>
 	<packaging>jar</packaging>
@@ -57,6 +57,20 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 	<reporting>
 		<plugins>
