--- a/AFE2016/pom.xml
+++ b/AFE2016/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -35,6 +35,13 @@
 			<version>2.3.20</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.java.spnego/spnego -->
+		<dependency>
+			<groupId>net.java.spnego</groupId>
+			<artifactId>spnego</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -44,6 +51,34 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>create-db</id>
+						<phase>install</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<srcFiles>
+								<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
+							</srcFiles>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.6.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -68,26 +103,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sql-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>create-db</id>
-						<phase>install</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
-						<configuration>
-							<srcFiles>
-								<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
-							</srcFiles>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 		<finalName>AFE2016</finalName>
 	</build>
 </project>
