--- a/LDAPLookup/src/main/webapp/WEB-INF/web.xml
+++ b/LDAPLookup/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,18 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>SimplityStartup</servlet-name>
+		<servlet-class>org.simplity.http.Startup</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>s</servlet-name>
+		<servlet-class>org.simplity.http.Serve</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>s</servlet-name>
+		<url-pattern>*._s</url-pattern>
+	</servlet-mapping>
 </web-app>
