--- a/AFE2016/pom.xml
+++ b/AFE2016/pom.xml
@@ -48,60 +48,134 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.166</version>
+		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>sql-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>create-db</id>
-						<phase>install</phase>
-						<goals>
-							<goal>execute</goal>
-						</goals>
+	<profiles>
+		<profile>
+			<id>test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sql-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>create-db</id>
+								<phase>install</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<srcFiles>
+										<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
+									</srcFiles>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>test</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete
+											file="${project.build.outputDirectory}/META-INF/context.xml" />
+										<copy file="src/main/resources/env/test/context.xml"
+											tofile="${project.build.outputDirectory}/META-INF/context.xml" />
+										<delete
+											file="${project.build.outputDirectory}/WEB-INF/comp/application.xml" />
+										<copy file="src/main/resources/env/test/application.xml"
+											tofile="${project.build.outputDirectory}/WEB-INF/comp/application.xml" />
+
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.6.0</version>
 						<configuration>
-							<srcFiles>
-								<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
-							</srcFiles>
+							<source>1.8</source>
+							<target>1.8</target>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>sql-maven-plugin</artifactId>
-					<version>1.5</version>
-					<dependencies>
-						<dependency>
-							<groupId>com.h2database</groupId>
-							<artifactId>h2</artifactId>
-							<version>1.3.166</version>
-						</dependency>
-					</dependencies>
-					<configuration>
-						<driver>org.h2.Driver</driver>
-						<url>jdbc:h2:file:D:/temp/AFE2016/db/nomination</url>
-						<username>sa</username>
-						<password></password>
-						<autocommit>true</autocommit>
-						<skip>${maven.test.skip}</skip>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<finalName>AFE2016</finalName>
-	</build>
+					</plugin>
+				</plugins>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>sql-maven-plugin</artifactId>
+							<version>1.5</version>
+							<dependencies>
+								<dependency>
+									<groupId>com.h2database</groupId>
+									<artifactId>h2</artifactId>
+									<version>1.3.166</version>
+								</dependency>
+							</dependencies>
+							<configuration>
+								<driver>org.h2.Driver</driver>
+								<url>jdbc:h2:file:D:/temp/AFE2016/db/nomination</url>
+								<username>sa</username>
+								<password></password>
+								<autocommit>true</autocommit>
+								<skip>${maven.test.skip}</skip>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+				<finalName>AFE2016</finalName>
+
+			</build>
+		</profile>
+		<profile>
+			<id>production</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>test</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete
+											file="${project.build.outputDirectory}/META-INF/context.xml" />
+										<copy file="src/main/resources/env/test/context.xml"
+											tofile="${project.build.outputDirectory}/META-INF/context.xml" />									
+										<delete
+											file="${project.build.outputDirectory}/WEB-INF/comp/application.xml" />
+										<copy file="src/main/resources/env/production/application.xml"
+											tofile="${project.build.outputDirectory}/WEB-INF/comp/application.xml" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.6.0</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
