Alerts and record highlight updated

--- a/AFE2016/.classpath
+++ b/AFE2016/.classpath
@@ -29,5 +29,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spnego-r7.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/sqljdbc4-3.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
