--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
     <module>kernel</module>
     <module>js</module>
     <module>LDAPLookup</module>
+    <module>SMTPService</module>
   </modules>
 </project>
