--- a/SMTPService/pom.xml
+++ b/SMTPService/pom.xml
@@ -1,52 +1,208 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.simplity</groupId>
-    <artifactId>simplity</artifactId>
-    <version>1.1.2</version>
-  </parent>
-  <groupId>com.infosys.qreuse</groupId>
-  <artifactId>SMTPService</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <name>SMTPService Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.simplity</groupId>
-      <artifactId>kernel</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>SMTPService</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
-        <executions>
-          <execution>
-            <id>ant-execute</id>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <ant>
-                  <target />
-                </ant>
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.simplity</groupId>
+		<artifactId>simplity</artifactId>
+		<version>1.1.2</version>
+	</parent>
+	<groupId>com.infosys.qreuse</groupId>
+	<artifactId>SMTPService</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>SMTPService Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<resourcespath>${project.build.directory}/classes</resourcespath>
+		<dbpath>D:/temp/SMTPService/db/smtpservice</dbpath>
+	</properties>	
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.simplity</groupId>
+			<artifactId>kernel</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.166</version>
+		</dependency>
+	</dependencies>
+	<profiles>
+		<profile>
+			<id>test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>sql-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>create-db</id>
+								<phase>install</phase>
+								<goals>
+									<goal>execute</goal>
+								</goals>
+								<configuration>
+									<srcFiles>
+										<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
+									</srcFiles>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.6.0</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>copy-resources1</id>
+								<!-- here the phase you need -->
+								<phase>validate</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/src/main/webapp/WEB-INF/comp</outputDirectory>
+									<resources>
+										<resource>
+											<directory>${basedir}/src/main/resources/env/test</directory>
+											<includes>
+												<include>application.xml</include>
+											</includes>
+											<filtering>true</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+							<execution>
+								<id>copy-resources2</id>
+								<!-- here the phase you need -->
+								<phase>validate</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/src/main/webapp/META-INF</outputDirectory>
+									<resources>
+										<resource>
+											<directory>${basedir}/src/main/resources/env/test</directory>
+											<includes>
+												<include>context.xml</include>
+											</includes>
+											<filtering>true</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+				</plugins>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>sql-maven-plugin</artifactId>
+							<version>1.5</version>
+							<dependencies>
+								<dependency>
+									<groupId>com.h2database</groupId>
+									<artifactId>h2</artifactId>
+									<version>1.3.166</version>
+								</dependency>
+							</dependencies>
+							<configuration>
+								<driver>org.h2.Driver</driver>
+								<url>jdbc:h2:file:${dbpath}</url>
+								<username>sa</username>
+								<password></password>
+								<autocommit>true</autocommit>
+								<skip>${maven.test.skip}</skip>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+				<finalName>SMTPService</finalName>
+			</build>
+		</profile>
+		<profile>
+			<id>production</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>copy-resources1</id>
+								<!-- here the phase you need -->
+								<phase>validate</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/src/main/webapp/WEB-INF/comp</outputDirectory>
+									<resources>
+										<resource>
+											<directory>${basedir}/src/main/resources/env/production</directory>
+											<includes>
+												<include>application.xml</include>
+											</includes>
+											<filtering>true</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+							<execution>
+								<id>copy-resources2</id>
+								<!-- here the phase you need -->
+								<phase>validate</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/src/main/webapp/META-INF</outputDirectory>
+									<resources>
+										<resource>
+											<directory>${basedir}/src/main/resources/env/production</directory>
+											<includes>
+												<include>context.xml</include>
+											</includes>
+											<filtering>true</filtering>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.6.0</version>
+						<configuration>
+							<source>1.8</source>
+							<target>1.8</target>
+						</configuration>
+					</plugin>
+				</plugins>
+				<finalName>SMTPService</finalName>				
+			</build>
+		</profile>
+	</profiles>
 </project>
