--- a/SMTPService/pom.xml
+++ b/SMTPService/pom.xml
@@ -16,7 +16,7 @@
 	<properties>
 		<resourcespath>${project.build.directory}/classes</resourcespath>
 		<dbpath>D:/temp/SMTPService/db/smtpservice</dbpath>
-	</properties>	
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -33,6 +33,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.3.166</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.5</version>
 		</dependency>
 	</dependencies>
 	<profiles>
@@ -52,7 +57,7 @@
 								</goals>
 								<configuration>
 									<srcFiles>
-										<srcFile>${resourcespath}/dbscripts/create_nominationdb.sql</srcFile>
+										<srcFile>${resourcespath}/dbscripts/create_smtpservicedb.sql</srcFile>
 									</srcFiles>
 								</configuration>
 							</execution>
@@ -201,7 +206,7 @@
 						</configuration>
 					</plugin>
 				</plugins>
-				<finalName>SMTPService</finalName>				
+				<finalName>SMTPService</finalName>
 			</build>
 		</profile>
 	</profiles>
