--- a/SMTPService/src/main/webapp/WEB-INF/web.xml
+++ b/SMTPService/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,14 @@
 
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
+	<filter>
+		<filter-name>ValidateApikey</filter-name>
+		<filter-class>com.infosys.qreuse.smtpservice.filter.AllowRegisteredMailRequest</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>ValidateApikey</filter-name>
+		<url-pattern>*._s</url-pattern>
+	</filter-mapping>	
 	<servlet>
 		<servlet-name>SimplityStartup</servlet-name>
 		<servlet-class>org.simplity.http.Startup</servlet-class>
@@ -41,6 +49,7 @@
 		<servlet-name>f</servlet-name>
 		<url-pattern>*._f</url-pattern>
 	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
