--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
     <module>js</module>
     <module>LDAPLookup</module>
     <module>SMTPService</module>
+    <module>SMTPServiceTest</module>
   </modules>
 </project>
