--- a/example/pom.xml
+++ b/example/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
