--- a/SMTPService/src/main/resources/config.properties
+++ b/SMTPService/src/main/resources/config.properties
@@ -1,3 +1,2 @@
-mail.smtp.host="blrkecsmtp01"
-mail.smtp.port="25"
-mail.smtp.from="encore@infosys.com"
+mail.smtp.host=blrkecsmtp01
+mail.smtp.port=25
