--- a/example/pom.xml
+++ b/example/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.simplity</groupId>
 		<artifactId>simplity</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1.2</version>
 	</parent>
 	<artifactId>example</artifactId>
 	<packaging>war</packaging>
