--- a/AFE2016/pom.xml
+++ b/AFE2016/pom.xml
@@ -49,6 +49,14 @@
 			<artifactId>h2</artifactId>
 			<version>1.3.166</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
 	</dependencies>
 	<profiles>
 		<profile>
