--- a/SMTPService/pom.xml
+++ b/SMTPService/pom.xml
@@ -148,7 +148,7 @@
 		<profile>
 			<id>production</id>
 			<properties>
-					<uploadfilespath>D:/temp/SMTPService/files</uploadfilespath>			
+					<uploadfilespath>E:/temp/SMTPService/files</uploadfilespath>			
 			</properties>
 			<build>
 				<plugins>
