properties file added for flatFile path

--- a/examples/wbFileAgent/.classpath
+++ b/examples/wbFileAgent/.classpath
@@ -28,5 +28,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Program Files/apache-tomcat-8.0.23/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
