LDAP, SMTP, JMS services added

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -19,6 +19,6 @@
 		<module>mcHelloWorld</module>
 		<module>wbBatch</module>
 		<module>wbFileAgent</module>
-		<module>petclinic</module>
+		<!--module>petclinic</module-->
 	</modules>
 </project>
