--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 	</parent>
 	<artifactId>helloworld</artifactId>
 	<packaging>war</packaging>
@@ -31,12 +30,12 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -114,7 +113,7 @@
 						<driver>org.h2.Driver</driver>
 						<url>jdbc:h2:file:${project.build.directory}/${dbpath}</url>
 						<username>sa</username>
-						<password></password>
+						<password />
 						<autocommit>true</autocommit>
 						<skip>${maven.test.skip}</skip>
 					</configuration>
