--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity.examples</groupId>
@@ -12,12 +14,11 @@
 	<packaging>war</packaging>
 	<name>petstore Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-
 	<properties>
-		<resourcespath>${project.build.directory}/classes</resourcespath>
-		<dbpath>petclinic</dbpath>
+		<resourcespath>src/main/resources/dbscripts/h2</resourcespath>
+		<dbpath>jdbc:h2:file:${project.build.directory}/petclinic</dbpath>
 		<torque.driver>org.h2.Driver</torque.driver>
-		<torque.database.url>jdbc:h2:file:${project.build.directory}/${dbpath}</torque.database.url>
+		<torque.database.url>${dbpath}</torque.database.url>
 		<torque.database.user>sa</torque.database.user>
 		<torque.database.password></torque.database.password>
 		<torque.database.schema></torque.database.schema>
@@ -64,9 +65,16 @@
 	</dependencies>
 	<build>
 		<finalName>petstore</finalName>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<testResources>
 			<testResource>
-				<directory>src\main\webapp\WEB-INF</directory>
+				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -76,15 +84,15 @@
 				<executions>
 					<execution>
 						<id>create-db</id>
-						<phase>install</phase>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>execute</goal>
 						</goals>
 						<configuration>
 							<srcFiles>
-								<srcFile>${resourcespath}/dbscripts/h2/schema.sql</srcFile>
-								<srcFile>${resourcespath}/dbscripts/h2/data.sql</srcFile>
-								<srcFile>${resourcespath}/dbscripts/h2/views.sql</srcFile>
+								<srcFile>${resourcespath}/schema.sql</srcFile>
+								<srcFile>${resourcespath}/data.sql</srcFile>
+								<srcFile>${resourcespath}/views.sql</srcFile>
 							</srcFiles>
 						</configuration>
 					</execution>
@@ -145,7 +153,7 @@
 					</dependencies>
 					<configuration>
 						<driver>org.h2.Driver</driver>
-						<url>jdbc:h2:file:${project.build.directory}/${dbpath}</url>
+						<url>${dbpath}</url>
 						<username>sa</username>
 						<password></password>
 						<autocommit>true</autocommit>
