--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -65,7 +65,7 @@
 				<executions>
 					<execution>
 						<id>create-db</id>
-						<phase>process-test-resources</phase>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>execute</goal>
 						</goals>
